

                 SCons - a software construction tool

                            Change Log

RELEASE 2.3.2.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Kendrick Boyd and Rob Managan:
    - Fixed the newglossary action to work with VariantDir (LaTeX).

  From Manuel Francisco Naranjo:
    - Added a default for the BUILDERS environment variable,
      to prevent not defined exception on a Clone().

  From Andrew Featherstone:
    - Added description of CheckTypeSize method (#1991).
    - Fixed handling of CPPDEFINE var in Append()
      for several list-dict combinations (#2900).

  From William Blevins:
    - Added test for Java derived-source dependency tree generation.
    - Added Copy Action symlink soft-copy support (#2395).
    - Various contributions to the documentation (UserGuide).

RELEASE 2.3.2

  From veon on bitbucket:
    - Fixed handling of nested ifs in CPP scanner PreProcessor class.

  From Michael Haubenwallner:
    - Respect user's CC/CXX values; don't always overwrite in generate()
    - Delegate linker Tool.exists() to CC/CXX Tool.exists().

  From Amir Szekely:
    - Fixed NoClean() for multi-target builders (#2353).

  From Russel Winder:
    - Revamp of the D language support. Tools for DMD, GDC and LDC provided
      and integrated with the C and C++ linking. NOTE: This is only tested
      with D v2. Support for D v1 is now deprecated.

  From Paweł Tomulik:
    - Fix SConf tests that write output

  From Gary Oberbrunner:
    - get default RPM architecture more robustly when building RPMs

  From Shane Gannon:
    - Support for Visual Studio 2013 (12.0)

  From Sye van der Veen:
    - Support for Visual Studio 12.0Exp, and fixes for earlier MSVS
      versions.

  From Anatoly Techtonik:
    - Several improvements for running scons.py from source:
      * engine files form source directory take priority over all other
        importable versions
      * message about scons.py running from source is removed to fix tests